# novim

./: .gitignore  Cargo.toml  LICENSE  PHASE0_COMPLETE.md  PHASE1_COMPLETE.md  PLAN.md  README.md  package.json  pnpm-lock.yaml
crates/novim-cli/: Cargo.toml
crates/novim-cli/src/: main.rs
crates/novim-core/: Cargo.toml
crates/novim-core/src/: async_task.rs  config.rs  editor.rs  error.rs  explorer.rs  finder.rs  fold.rs  git.rs  help.rs  highlight.rs  input.rs  lib.rs  text_utils.rs  theme.rs  url.rs  welcome.rs
crates/novim-core/src/buffer/: mod.rs
crates/novim-core/src/editor/: completion.rs  handlers.rs  input.rs  mod.rs  types.rs  workspace.rs
crates/novim-core/src/emulator/: grid.rs  mod.rs  performer.rs
crates/novim-core/src/lsp/: mod.rs  provider.rs  transport.rs
crates/novim-core/src/pane/: mod.rs
crates/novim-core/src/plugin/: lua_bridge.rs  manager.rs  mod.rs  registry.rs
crates/novim-core/src/plugin/builtins/: git_signs.rs  lsp_plugin.rs  mod.rs  syntax.rs
crates/novim-core/src/plugin/lua_bridge/: api.rs  dispatch.rs  mod.rs  tests.rs
crates/novim-core/src/session/: mod.rs
crates/novim-core/src/themes/: catppuccin-latte.toml  catppuccin-mocha.toml  dracula.toml  google-light.toml  one-dark.toml  solarized-dark.toml
crates/novim-gui/: Cargo.toml
crates/novim-gui/src/: gpu.rs  input.rs  main.rs  renderer.rs
crates/novim-gui/src/renderer/: mod.rs  pane.rs  popups.rs  styling.rs  theme.rs
crates/novim-neon/: Cargo.toml
crates/novim-neon/src/: lib.rs
crates/novim-remote/: Cargo.toml
crates/novim-remote/src/: client.rs  lib.rs  protocol.rs  server.rs  transport.rs
crates/novim-tui/: Cargo.toml
crates/novim-tui/src/: lib.rs  renderer.rs
crates/novim-tui/src/renderer/: mod.rs  pane.rs  popups.rs  styling.rs  util.rs
crates/novim-types/: Cargo.toml
crates/novim-types/src/: lib.rs
examples/plugins/: auto_save.lua  bookmark.lua  float_preview.lua  format_on_save.lua  git_branch.lua  quick_run.lua  trim_whitespace.lua  word_count.lua  zen_mode.lua
