[workspace]
members = [
    "crates/novim-core",
    "crates/novim-tui",
    "crates/novim-neon",
    "crates/novim-types",
    "crates/novim-cli",
    "crates/novim-gui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Novim Contributors"]
license = "MIT"

[workspace.dependencies]
# Terminal UI
ratatui = "0.28"
crossterm = "0.28"

# Text buffer
ropey = "1.6"

# Terminal emulator
vte = "0.13"
portable-pty = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Syntax highlighting
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.6"
tree-sitter-python = "0.23"
tree-sitter-md = "0.3"

# Regex
regex = "1"

# LSP
lsp-types = "0.97"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Neon for Node.js FFI
neon = { version = "1.0", default-features = false, features = ["napi-6"] }

# GUI
wgpu = "28"
winit = "0.30"
glyphon = "0.10"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

# Internal crates
novim-types = { path = "crates/novim-types" }
novim-core = { path = "crates/novim-core" }
novim-tui = { path = "crates/novim-tui" }

# Optimize all dependencies even in debug builds.
# Critical for wgpu + cosmic-text which are 20-50x slower unoptimized.
[profile.dev.package."*"]
opt-level = 2
